--- a/soccer-app/src/app/app.component.html
+++ b/soccer-app/src/app/app.component.html
@@ -1,8 +1,5 @@
+<app-header></app-header>
 <div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <h1>Hello</h1>
-    </div>
-  </div>
+  <app-players></app-players>
 </div>
 
