--- a/soccer-app/src/app/players/player-lists/dcr/dcr.component.html
+++ b/soccer-app/src/app/players/player-lists/dcr/dcr.component.html
@@ -2,9 +2,9 @@
     <a href="#"
     (click) = "onSelected()">
       <div class="card text-center">
-        <img class="" [src]= "dr.imagePath" alt="Card image cap">
+        <img class="" [src]= "dcr.imagePath" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title" >{{dr.name}}</h5>
+          <h5 class="card-title" >{{dcr.name}}</h5>
         </div>
       </div>
     </a>
