--- a/soccer-app/src/app/players/pitch/pitch.component.html
+++ b/soccer-app/src/app/players/pitch/pitch.component.html
@@ -5,7 +5,7 @@
       <td class="col-md-2"></td>
       <td class="col-md-2">
         <div class="card text-center">
-            <img class="" [src]= "gk.imagePath" alt="Card image cap">
+            <img class="img-responsive" [src]= "gk.imagePath" >
             <h4 class="card-title" >{{gk.name}}</h4>
         </div>
       </td>
@@ -16,11 +16,16 @@
     <tr>
         <td class="col-md-2">
           <div class="card text-center">
-              <img class="" [src]= "gk.imagePath" alt="Card image cap">
-              <h4 class="card-title" >{{gk.name}}</h4>
+              <img class="img-responsive" [src]= "dr.imagePath" alt="Card image cap">
+              <h4 class="card-title" >{{dr.name}}</h4>
           </div>
         </td>
-        <td class="col-md-2"></td>
+        <td class="col-md-2">
+          <div class="card text-center">
+              <img class="img-responsive" [src]= "dcr.imagePath" alt="Card image cap">
+              <h4 class="card-title" >{{dcr.name}}</h4>
+          </div>
+        </td>
         <td class="col-md-2"></td>
         <td class="col-md-2"></td>
         <td class="col-md-2"></td>
