--- a/soccer-app/src/app/players/player-lists/dl/dl.component.html
+++ b/soccer-app/src/app/players/player-lists/dl/dl.component.html
@@ -2,9 +2,9 @@
   <a href="#"
   (click) = "onSelected()">
     <div class="card text-center">
-      <img class="" [src]= "dcl.imagePath" alt="Card image cap">
+      <img class="" [src]= "dl.imagePath" alt="Card image cap">
       <div class="card-body">
-        <h5 class="card-title" >{{dcl.name}}</h5>
+        <h5 class="card-title" >{{dl.name}}</h5>
       </div>
     </div>
   </a>
