--- a/soccer-app/src/app/players/players.component.html
+++ b/soccer-app/src/app/players/players.component.html
@@ -7,7 +7,9 @@
   <div class="col-md-10">
     <app-pitch
       [gk]="selectedGk"
+      [dcr]="selectedDcr"
+      [dcl]="selectedDcl"
       [dr]="selectedDr"
-      [dcr]="selectedDcr"></app-pitch>
+      [dl]="selectedDl"></app-pitch>
   </div>
 </div>
