all positions are done

--- a/soccer-app/src/app/players/pitch/pitch.component.html
+++ b/soccer-app/src/app/players/pitch/pitch.component.html
@@ -4,8 +4,8 @@
       <td class="col-md"></td>
       <td class="col-md"></td>
       <td class="col-md">
-        <div class="card text-center">
-            <img [src]= "gk.imagePath" >
+        <div class="card text-center" style="max-width: 8rem;">
+            <img class="img-responsive" [src]= "gk.imagePath" >
             <h4 class="card-title"  >{{gk.name}}</h4>
         </div>
       </td>
@@ -16,15 +16,15 @@
     <tr>
         <td class="col-md"></td>
         <td class="col-md">
-          <div class="card text-center">
-              <img [src]= "dcr.imagePath" alt="Card image cap">
+          <div class="card text-center" style="max-width: 8rem;">
+              <img class="img-responsive" [src]= "dcr.imagePath" alt="Card image cap">
               <h4 class="card-title" >{{dcr.name}}</h4>
           </div>
         </td>
         <td class="col-md"></td>
         <td class="col-md">
-          <div class="card text-center">
-            <img [src]= "dcl.imagePath" alt="Card image cap">
+          <div class="card text-center" style="max-width: 8rem;">
+            <img class="img-responsive" [src]= "dcl.imagePath" alt="Card image cap">
             <h4 class="card-title" >{{dcl.name}}</h4>
         </div>
         </td>
@@ -33,20 +33,74 @@
 
       <tr>
         <td class="col-md">
-          <div class="card text-center">
-            <img [src]= "dr.imagePath" >
+          <div class="card text-center" style="max-width: 8rem;">
+            <img class="img-responsive" [src]= "dr.imagePath" >
             <h4 class="card-title"  >{{dr.name}}</h4>
-        </div>
+          </div>
         </td>
         <td class="col-md"></td>
-        <td class="col-md"></td>
+        <td class="col-md">
+          <div class="card text-center" style="max-width: 8rem;">
+            <img class="img-responsive" [src]= "dmc.imagePath" >
+            <h4 class="card-title"  >{{dmc.name}}</h4>
+          </div>
+        </td>
         <td class="col-md"></td>
         <td class="col-md-2">
-          <div class="card text-center">
-            <img [src]= "dl.imagePath" >
+          <div class="card text-center" style="max-width: 8rem;">
+            <img class="img-responsive" [src]= "dl.imagePath" >
             <h4 class="card-title"  >{{dl.name}}</h4>
         </div>
         </td>
+      </tr>
+
+      <tr>
+        <td class="col-md"></td>
+        <td class="col-md">
+          <div class="card text-center" style="max-width: 8rem;">
+            <img class="img-responsive" [src]= "mcr.imagePath" >
+            <h4 class="card-title"  >{{mcr.name}}</h4>
+          </div>
+        </td>
+        <td class="col-md"></td>
+        <td class="col-md">
+          <div class="card text-center" style="max-width: 8rem;">
+            <img class="img-responsive" [src]= "mcl.imagePath" >
+            <h4 class="card-title"  >{{mcl.name}}</h4>
+          </div>
+        </td>
+        <td class="col-md"></td>
+      </tr>
+
+      <tr>
+        <td class="col-md">
+          <div class="card text-center" style="max-width: 8rem;">
+            <img class="img-responsive" [src]= "fcr.imagePath" >
+            <h4 class="card-title"  >{{fcr.name}}</h4>
+          </div>
+        </td>
+        <td class="col-md"></td>
+        <td class="col-md"></td>
+        <td class="col-md"></td>
+        <td class="col-md">
+          <div class="card text-center" style="max-width: 8rem;">
+            <img class="img-responsive" [src]= "fcl.imagePath" >
+            <h4 class="card-title"  >{{fcl.name}}</h4>
+          </div>
+        </td>
+      </tr>
+
+      <tr>
+        <td class="col-md"></td>
+        <td class="col-md"></td>
+        <td class="col-md">
+          <div class="card text-center" style="max-width: 8rem;">
+            <img class="img-responsive" [src]= "fc.imagePath" >
+            <h4 class="card-title"  >{{fc.name}}</h4>
+          </div>
+        </td>
+        <td class="col-md"></td>
+        <td class="col-md"></td>
       </tr>
 
   </tbody>
