--- a/soccer-app/src/app/players/player-lists/fcl/fcl.component.html
+++ b/soccer-app/src/app/players/player-lists/fcl/fcl.component.html
@@ -2,9 +2,9 @@
   <a href="#"
   (click) = "onSelected()">
     <div class="card text-center">
-      <img class="" [src]= "dmc.imagePath" alt="Card image cap">
+      <img class="" [src]= "fcl.imagePath" alt="Card image cap">
       <div class="card-body">
-        <h5 class="card-title" >{{dmc.name}}</h5>
+        <h5 class="card-title" >{{fcl.name}}</h5>
       </div>
     </div>
   </a>
